# IoTServer

./: .gitignore  CMakeLists.txt  config.json.example  main.cpp
models/: DB.cpp  DB.h  DBdevice.cpp  DBdevice.h  data.cpp  data.h  device.cpp  device.h
routes/: dataRoutes.cpp  dataRoutes.h  deviceRoutes.cpp  deviceRoutes.h  wsEndpoint1.cpp  wsEndpoint1.h
sql/: data.sql
utils/: databaseHolder.cpp  databaseHolder.h  encode.cpp  encode.h  jsonReader.cpp  jsonReader.h  jsonWriter.cpp  jsonWriter.h  ssl.cpp  ssl.h  websocket.cpp  websocket.h
